--- a/recipe/templates/update-recipe.html
+++ b/recipe/templates/update-recipe.html
@@ -4,7 +4,7 @@
     <h1 class="text-center mb-4 noto-sans">Recipe Add Form</h1>
     <div class="container-fluid d-flex justify-content-center align-items-center" >
         <div class="border shadow-lg p-3 mb-5 bg-white rounded">
-            <form method="POST" action="/add_recipes" enctype="multipart/form-data" >
+            <form method="POST"  enctype="multipart/form-data" >
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="exampleFormControlInput1" class="form-label">Recipe Name</label>
@@ -13,6 +13,7 @@
                         name="recipe_name"
                         class="form-control"
                         placeholder="Enter Name"
+                        value="{{ recipe.recipe_name }}"
                     />
                 </div>
                 <div class="form-group">
@@ -21,7 +22,7 @@
                         class="form-control"
                         name="recipe_description"
                         rows="3"
-                    ></textarea>
+                    >{{ recipe.recipe_description }}</textarea>
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlTextarea1" class="form-label">Recipe Image</label>
@@ -31,38 +32,12 @@
                         name="recipe_image"
                     />
                 </div>
-                <button class="mt-3 btn btn-primary d-block mx-auto">Submit</button>
+                <button class="mt-3 btn btn-primary d-block mx-auto">Update</button>
             </form>
         </div>
     </div>
     {% block content %}
-    <h1 class="Noto Sans text-center">List of Recipies</h1>
-    <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Recipe Name</th>
-            <th scope="col">Recipe Description</th>
-            <th scope="col">Recipe Image</th>
-            <th scope="col">Action</th>
-          </tr>
-        </thead>
-        <tbody>
-            {% for recipe in recipes %}
-          <tr>
-            <th scope="row">1</th>
-            <td>{{ recipe.recipe_name}}</td>
-            <td>{{ recipe.recipe_description}}</td>
-            <td><img src="/media/{{ recipe.recipe_image }}" style="height:150px; width: 200px;"  alt=""></td>
-            <td>
-                <a href="/update_recipe/{{ recipe.id }}"><i class="fa-solid fa-pen-to-square me-2" style="color: rgba(9, 27, 81, 0.858); font-size: 24px;"></i></a>
-                <a href="/delete_recipe/{{ recipe.id }}"><i class="fa-solid fa-trash" style="color: red; font-size: 24px;"></i></a>
-            </td>
-        </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      {% endblock %}
+    {% endblock content %}
 </div>
 
 
